--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <div class="or">Or continue with</div>
             <div class="list">
                 <div class="item">
-                    <img src="google.webg" alt="">
+                    <img src="google.png" alt="">
                 </div>
                 <div class="item">
-                    <img src="fb.png" alt="">
+                    <img src="facebook.png" alt="">
                 </div>
                 <div class="item">
                     <img src="twitter.png" alt="">
