--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <body>
     <section>
         <div class="login">
-            <div class="title">Hello!</div>
+            <div class="title">Welcome to Holo:3</div>
             <div class="des">
-                Welcome back you've<br>
-                been missed!
+                Did you can?
             </div>
             <div class="group">
                 <input type="text" id="username"
@@ -29,7 +28,7 @@
                 </span>
             </div>
             <div class="recovey">
-                <a href="Recovery password"></a>
+                <p><a href="">Recovery password</a></p>
             </div>
             <div class="signIn">
                 <button>Sign In</button>
