--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
             </div>
             <div class="register">
-                Not a member? <a href="">Register now</a>
+                Not a member? <a href="https://trinhtrongphuock66hus.github.io/register/">Register now</a>
             </div>
         </div>
         
