--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </span>
             </div>
             <div class="recovey">
-                <p><a href="">Recovery password</a></p>
+                <p><a href="https://trinhtrongphuock66hus.github.io/recoverypassword/">Recovery password</a></p>
             </div>
             <div class="signIn">
                 <button>Sign In</button>
