--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p><a href="https://trinhtrongphuock66hus.github.io/recoverypassword/">Recovery password</a></p>
             </div>
             <div class="signIn">
-                <button>Sign In</button>
+                <a href="https://trinhtrongphuock66hus.github.io/page/"><button>Sign In</button></a>
             </div>
             <div class="or">Or continue with</div>
             <div class="list">
