--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
             <div class="or">Or continue with</div>
             <div class="list">
                 <div class="item">
-                    <a href="" target="_blank"><img src="google.png" alt=""></a>
+                    <a><img src="google.png" alt=""></a>
                 </div>
                 <div class="item">
-                    <a href="" target="_blank"><img src="facebook.png" alt=""></a>
+                    <a><img src="facebook.png" alt=""></a>
                 </div>
                 <div class="item">
-                    <a href="" target="_blank"><img src="twitter.png" alt=""></a>
+                    <a><img src="twitter.png" alt=""></a>
                 </div>
             </div>
             <div class="register">
